removed console.log statements now that I'm reasonably certain it's working

--- a/demo.html
+++ b/demo.html
@@ -141,8 +141,9 @@
         <h2>demo</h2>
         <p>
             Below, the <span class='parent'>green box</span> represents the 
-            parent, and the <span style='border: solid red'>red-bordered image
-            </span> represents the object. In each category, the demo shows what
+            parent, and the 
+            <span style='border: solid red'>red-bordered image</span> 
+            represents the object. In each category, the demo shows what
             the parent/object combination looks like before (on the left) and 
             after applying the plugin (on the right). Please note that the 
             "center" option is enabled for each demo.
