--- a/demo.html
+++ b/demo.html
@@ -96,15 +96,7 @@
     <script src="jquery.scale.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function(){
-            $("#same-size").scale("center");
-            $("#taller").scale("center");
-            $("#wider").scale("center");
-            $("#larger_h-ct-w").scale("center");
-            $("#larger_w-ct-h").scale("center");
-            $("#larger_eq").scale("center");
-            $("#smaller_h-ct-w").scale("center");
-            $("#smaller_w-ct-h").scale("center");
-            $("#smaller_eq").scale("center");
+            $(".scale").scale("center");
         });
     </script>
 </head>
@@ -161,7 +153,7 @@
             </td>
             <td>
                 <div class='parent parent_same-size'>
-                    <img id='same-size' class='object' src='test-image.gif'>
+                    <img id='same-size' class='object scale' src='test-image.gif'>
                 </div>
             </td>
         </tr></table>
@@ -179,7 +171,7 @@
             </td>
             <td>
                 <div class='parent parent_too-short'>
-                    <img id='taller' class='object' src='test-image.gif'>
+                    <img id='taller' class='object scale' src='test-image.gif'>
                 </div>
             </td>
         </tr></table>
@@ -197,7 +189,7 @@
             </td>
             <td>
                 <div class='parent parent_too-skinny'>
-                    <img id='wider' src='test-image.gif' class='object'>
+                    <img id='wider' src='test-image.gif' class='object scale'>
                 </div>
             </td>
         </tr></table>
@@ -216,7 +208,7 @@
             </td>
             <td>
                 <div class='parent parent_too-small_h-ct-w'>
-                    <img id='larger_h-ct-w' src='test-image.gif' class='object'>
+                    <img id='larger_h-ct-w' src='test-image.gif' class='object scale'>
                 </div>
             </td>
         </tr></table>
@@ -235,7 +227,7 @@
             </td>
             <td>
                 <div class='parent parent_too-small_w-ct-h'>
-                    <img id='larger_w-ct-h' src='test-image.gif' class='object'>
+                    <img id='larger_w-ct-h' src='test-image.gif' class='object scale'>
                 </div>
             </td>
         </tr></table>
@@ -254,7 +246,7 @@
             </td>
             <td>
                 <div class='parent parent_too-small_eq'>
-                    <img id='larger_eq' src='test-image.gif' class='object'>
+                    <img id='larger_eq' src='test-image.gif' class='object scale'>
                 </div>
             </td>
         </tr></table>
@@ -274,7 +266,7 @@
             <td>
                 <div class='parent parent_too-large_h-ct-w'>
                     <img id='smaller_h-ct-w' src='test-image.gif' 
-                         class='object'>
+                         class='object scale'>
                 </div>
             </td>
         </tr></table>
@@ -294,7 +286,7 @@
             <td>
                 <div class='parent parent_too-large_w-ct-h'>
                     <img id='smaller_w-ct-h' src='test-image.gif' 
-                         class='object'>
+                         class='object scale'>
                 </div>
             </td>
         </tr></table>
@@ -313,7 +305,7 @@
             </td>
             <td>
                 <div class='parent parent_too-large_eq'>
-                    <img id='smaller_eq' src='test-image.gif' class='object'>
+                    <img id='smaller_eq' src='test-image.gif' class='object scale'>
                 </div>
             </td>
         </tr></table>
