--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,10 @@
+<!--
+  jQuery.scale plugin demo page
+  Copyright (c) 2009 to current, Oregon State Univerisity - info(at)osuosl.org | osuosl.org
+  Dual-licensed under GPLv2 and the MIT License
+
+  By Rob McGuire-Dale (rob@osuosl.org), September 2009
+-->
 <html>
 <head>
     <style>
