Updating demo page.

--- a/demo/index.html
+++ b/demo/index.html
@@ -71,7 +71,7 @@
             padding: 1em 3em 3em;
             margin-left: auto;
             margin-right: auto;
-            max-width:800;
+            max-width:700;
             border: 1px solid gray;
         }
 
@@ -133,10 +133,14 @@
 </head>
 <body>
     <div class='title'>
-    <h1>jquery.scale</h1>
-    <p class='indent'><a href='jquery.scale.js'>[download]</a></p>
-    <p class='indent'>
-        <a href='http://github.com/robatron/jquery.scale'>[github page]</a></p>
+    	<h1>jquery.scale</h1>
+    	<p class='indent'>
+			<a href='../jquery.scale.js'>
+				[download]</a>
+		</p>
+    	<p class='indent'>
+        	<a href='http://github.com/robatron/jquery.scale'>[github page]</a>
+		</p>
     </div>
     
     <div class='indent'>
@@ -412,8 +416,7 @@
     <div class='footer-wrapper'>
         <div class='footer'>
             <p>
-                jQuery.scale plugin and demo page written by Rob McGuire-Dale 
-                (rob at osuosl dot org)
+                jquery.scale jQuery extention and demo page written by <a href='http://robmd.net'>Rob McGuire-Dale</a>
             </p>
             <p>
                 Copyright (c) 2009 <a href='http://osuosl.org'>OSU Open Source 
