--- a/demo/index.html
+++ b/demo/index.html
@@ -103,6 +103,16 @@
         h3{
             margin-top:3em;
         }
+        
+        a{
+            color: blue;
+            text-decoration: none;
+        }
+
+        a:hover{
+            text-decoration: underline;
+        }
+            
 
         table { 
             margin-bottom: 3em; 
