--- a/demo/index.html
+++ b/demo/index.html
@@ -92,6 +92,10 @@
             border-top: 1px solid gray;
         }
 
+        li{
+            margin-bottom: 10px;
+        }
+
         h1{
             margin: 0px;
         }
@@ -137,7 +141,7 @@
     <script 
         src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js" 
         type="text/javascript"></script>    
-    <script src="../jquery.scale.js" type="text/javascript"></script>
+    <script src="../jquery.scale.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function(){
 
@@ -155,14 +159,18 @@
     </div>
 
     <div id='main'>
-        <p>
-            <a href='../jquery.scale.js'>[download]</a>
-        </p>
-        <p>
-            <a href='http://github.com/robatron/jquery.scale'>
-                [github project page]
-            </a>
-        </p>
+        
+        <ul>
+            <li>
+                <b>download</b> <a href='../jquery.scale.js'>full</a> or
+                <a href='../jquery.scale.min.js'>minimized</a>
+            </li>
+            <li>
+                <a href='http://github.com/robatron/jquery.scale'>
+                    github project page
+                </a>
+            </li>
+        </ul>
    
         <h2>about</h2>
         <p>
