--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
 
   By Rob McGuire-Dale (http://robmd.net), September 2009
 -->
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
     <style>
